testdata/baselines/reference/submodule/compiler/noImplicitAnyDestructuringInPrivateMethod.errors.txt
noImplicitAnyDestructuringInPrivateMethod.ts(10,13): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.


==== noImplicitAnyDestructuringInPrivateMethod.ts (1 errors) ====
    type Arg = {
        a: number;
    };
    export class Bar {
        private bar({ a, }: Arg): number {
            return a;
        }
    }
    export declare class Bar2 {
        private bar({ a, });
                ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
    }